--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,6 +7,7 @@ ktor {
     modules = [
       rescueme.com.ApplicationKt.main
       rescueme.com.entry_point.dog.ModuleKt.module
+      rescueme.com.entry_point.shelter.ModuleKt.module
     ]
   }
 }
