Kafka producer integration

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,14 +12,14 @@ services:
 
   kafka:
     image: confluentinc/cp-kafka:6.1.0
-    hostname: kafka1
-    container_name: kafka-broker-1
+    hostname: kafka
+    container_name: kafka
     ports:
       - "19092:19092"
       - "9092:9092"
       - "9101:9101"
     environment:
-      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka1:19092,LISTENER_DOCKER_EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9092
+      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://localhost:19092,LISTENER_DOCKER_EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_INTERNAL
       KAFKA_ZOOKEEPER_CONNECT: "zookeper:2181"
