--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -12,3 +12,12 @@ ktor {
     ]
   }
 }
+
+kafka {
+  producer {
+    bootstrap.servers = ["127.0.0.1:9092"]
+    key.serializer = "org.apache.kafka.common.serialization.StringSerializer"
+    value.serializer = "org.apache.kafka.common.serialization.StringSerializer"
+
+  }
+}
